--- a/.github/workflows/go-test.yaml
+++ b/.github/workflows/go-test.yaml
@@ -26,7 +26,7 @@ jobs:
         shell: bash --noprofile --norc -x -eo pipefail {0}
         run: |
           set -e
-          go test -vet=off -i ./...
+          go test -vet=off ./...
           # go test -vet=off -v -run=TestNoRace --failfast -p=1 ./...
           # coverage via cov.sh disabled while just testing the waters
           # Also disable race since we are overwhelming the GHA runners.
